fix(precommit): reduce protected validator false positives

--- a/docs/V1.0-TEST-GUIDE.md
+++ b/docs/V1.0-TEST-GUIDE.md
@@ -45,7 +45,7 @@ opencode
 
 ### Verifikation:
 ```bash
-cat /tmp/pai-opencode-debug.log | grep "Context injected"
+cat ~/.config/opencode/plugins/debug.log | grep "Context injected"
 # Sollte zeigen: "Context injected successfully"
 ```
 
@@ -64,7 +64,7 @@ cat /tmp/pai-opencode-debug.log | grep "Context injected"
 
 ### Verifikation:
 ```bash
-cat /tmp/pai-opencode-debug.log | grep "BLOCKED"
+cat ~/.config/opencode/plugins/debug.log | grep "BLOCKED"
 # Sollte Security-Block Entry zeigen
 ```
 
@@ -81,14 +81,16 @@ cat /tmp/pai-opencode-debug.log | grep "BLOCKED"
 
 ### Erwartetes Ergebnis:
 ```bash
-ls ~/.config/opencode/MEMORY/WORK/2026-01/
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+ls "$PAI_DIR/MEMORY/WORK/2026-01/"
 # Sollte einen neuen Ordner zeigen: {timestamp}_erklaere-mir-typescript/
 # Mit: META.yaml, ISC.json, THREAD.md
 ```
 
 ### Verifikation:
 ```bash
-cat ~/.config/opencode/MEMORY/WORK/2026-01/*/META.yaml
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+cat "$PAI_DIR/MEMORY/WORK/2026-01"/*/META.yaml
 # Sollte zeigen: status: IN_PROGRESS, title: "..."
 ```
 
@@ -104,13 +106,15 @@ cat ~/.config/opencode/MEMORY/WORK/2026-01/*/META.yaml
 
 ### Erwartetes Ergebnis:
 ```bash
-cat ~/.config/opencode/MEMORY/LEARNING/SIGNALS/ratings.jsonl
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+cat "$PAI_DIR/MEMORY/LEARNING/SIGNALS/ratings.jsonl"
 # Sollte JSON-Entry mit score: 8 zeigen
 ```
 
 ### Verifikation für niedrige Ratings (< 7):
 ```bash
-ls ~/.config/opencode/MEMORY/LEARNING/RESPONSE/2026-01/
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+ls "$PAI_DIR/MEMORY/LEARNING/RESPONSE/2026-01/"
 # Sollte Learning-File zeigen wenn Rating < 7 war
 ```
 
@@ -126,13 +130,15 @@ ls ~/.config/opencode/MEMORY/LEARNING/RESPONSE/2026-01/
 
 ### Erwartetes Ergebnis:
 ```bash
-ls ~/.config/opencode/MEMORY/RESEARCH/2026-01/
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+ls "$PAI_DIR/MEMORY/RESEARCH/2026-01/"
 # Sollte zeigen: AGENT-{type}_{timestamp}_{slug}.md
 ```
 
 ### Verifikation:
 ```bash
-cat ~/.config/opencode/MEMORY/RESEARCH/2026-01/AGENT-*.md | head -20
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+cat "$PAI_DIR/MEMORY/RESEARCH/2026-01/AGENT-"*.md | head -20
 # Sollte Agent-Output mit Description und Summary zeigen
 ```
 
@@ -148,13 +154,14 @@ cat ~/.config/opencode/MEMORY/RESEARCH/2026-01/AGENT-*.md | head -20
 
 ### Erwartetes Ergebnis:
 ```bash
-ls ~/.config/opencode/MEMORY/LEARNING/*/2026-01/
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+ls "$PAI_DIR/MEMORY/LEARNING"/*/2026-01/
 # Könnte Learning-Files zeigen (je nach Session-Inhalt)
 ```
 
 ### Verifikation:
 ```bash
-cat /tmp/pai-opencode-debug.log | grep "Learning"
+cat ~/.config/opencode/plugins/debug.log | grep "Learning"
 # Sollte zeigen: "Extracted N learnings from work session"
 ```
 
@@ -176,7 +183,7 @@ cd ~/.config/opencode && git status
 
 ### Verifikation:
 ```bash
-cat /tmp/pai-opencode-debug.log | grep "Skill restore"
+cat ~/.config/opencode/plugins/debug.log | grep "Skill restore"
 # Sollte zeigen: "Skill restore: N files restored" (oder 0 wenn keine modifiziert)
 ```
 
@@ -188,7 +195,8 @@ cat /tmp/pai-opencode-debug.log | grep "Skill restore"
 
 ### Prüfung:
 ```bash
-ls -la ~/.config/opencode/MEMORY/
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+ls -la "$PAI_DIR/MEMORY/"
 ```
 
 ### Erwartete Struktur:
@@ -217,7 +225,7 @@ MEMORY/
 
 ### Prüfung:
 ```bash
-cat /tmp/pai-opencode-debug.log
+cat ~/.config/opencode/plugins/debug.log
 ```
 
 ### Erwartete Log-Einträge:
@@ -260,17 +268,18 @@ cat ~/.config/opencode/settings.json | grep plugins
 ### Keine Log-Einträge
 ```bash
 # Prüfe Permissions
-ls -la /tmp/pai-opencode-debug.log
+ls -la ~/.config/opencode/plugins/debug.log
 
 # Erstelle manuell
-touch /tmp/pai-opencode-debug.log
-chmod 666 /tmp/pai-opencode-debug.log
+touch ~/.config/opencode/plugins/debug.log
+chmod 666 ~/.config/opencode/plugins/debug.log
 ```
 
 ### MEMORY nicht erstellt
 ```bash
 # Erstelle manuell
-mkdir -p ~/.config/opencode/MEMORY/{LEARNING/{ALGORITHM,CODE,GENERAL,RESPONSE,SIGNALS,SYSTEM},RESEARCH,STATE,WORK}
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+mkdir -p "$PAI_DIR/MEMORY"/{LEARNING/{ALGORITHM,CODE,GENERAL,RESPONSE,SIGNALS,SYSTEM},RESEARCH,STATE,WORK}
 ```
 
 ---
