docs: document ExtractSessionLearnings tooling

--- a/docs/V1.0-TEST-GUIDE.md
+++ b/docs/V1.0-TEST-GUIDE.md
@@ -165,6 +165,17 @@ cat ~/.config/opencode/plugins/debug.log | grep "Learning"
 # Sollte zeigen: "Extracted N learnings from work session"
 ```
 
+### Fallback (manual, hook-free)
+
+If automatic extraction doesn’t run reliably, use the manual tool:
+
+```bash
+PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
+bun run "$PAI_DIR/skills/PAI/Tools/ExtractSessionLearnings.ts" --latest --persist
+```
+
+Docs: `docs/tooling/ExtractSessionLearnings.md`
+
 ---
 
 ## Test 7: Skill Restore Workaround
