chore: checkpoint skill system and runtime updates

--- a/docs/V1.0-TEST-GUIDE.md
+++ b/docs/V1.0-TEST-GUIDE.md
@@ -293,6 +293,44 @@ PAI_DIR=${PAI_DIR:-$HOME/.config/opencode}
 mkdir -p "$PAI_DIR/MEMORY"/{LEARNING/{ALGORITHM,CODE,GENERAL,RESPONSE,SIGNALS,SYSTEM},RESEARCH,STATE,WORK}
 ```
 
+### Agent hängt / Tool-Ausführung "stuck"
+
+Symptom: OpenCode wirkt eingefroren (keine weiteren Ausgaben), oft nach einem Tool-Call.
+
+1) Debug-Log live beobachten:
+
+```bash
+tail -f ~/.config/opencode/plugins/debug.log
+```
+
+2) Diagnose anhand des letzten Log-Eintrags:
+
+- **Letzter Eintrag ist** `Tool before: <tool>` **und danach kommt nichts**
+  - Ursache ist typischerweise ein Block in `tool.execute.before` (z.B. History Capture Queue).
+  - Abhilfe (schnell): starte OpenCode mit Capture-Serialization aus:
+
+  ```bash
+  PAI_SERIALIZE_EVENTS=0 opencode
+  ```
+
+  - Abhilfe (Debug): aktiviere Debug + Toasts (falls der Client TUI-Toast unterstützt):
+
+  ```bash
+  PAI_DEBUG=1 PAI_HISTORY_CAPTURE_TOASTS=1 opencode
+  ```
+
+- **Es gibt** `Security check passed for <tool>` **aber kein** `Tool after: <tool>`
+  - Dann hängt die Tool-Ausführung selbst (nicht der Pre-Hook). Prüfe das Tool separat.
+
+3) Fail-open Hinweise
+
+Wenn Fail-open aktiv ist, siehst du Warnungen im Debug-Log wie:
+
+- `HistoryCapture fail-open: timeout label=...`
+- `HistoryCapture serial queue wait timed out ...`
+
+Diese Warnungen bedeuten: Capture wurde abgebrochen (best-effort), damit der Agent weiterläuft.
+
 ---
 
 ## Nach erfolgreichem Test
